@@ -3,6 +3,7 @@
 	* rsvg-css.c (rsvg_css_parse_list): Fix memory leak
 	(rsvg_css_parse_aspect_ratio): Better detection code
 	* rsvg-cond.c: New file; meant to evaluate <switch> statement conditions
+	* rsvg-styles.c, rsvg-text.c: Work on text's unicode-bidi and direction attributes
 	
 2004-06-14  Dom Lachowicz <cinamod@hotmail.com>
 
